Added /docs and /tableau.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 # dbt build artifacts
-target/
-logs/
-dbt_packages/
+ae_bootcamp/target/
+ae_bootcamp/logs/
+ae_bootcamp/dbt_packages/
 
 # Python virtual environment
 .venv/
 
 # macOS
 .DS_Store
+
+# repo-level logs
+logs/
